--- a/.env
+++ b/.env
@@ -30558,15 +30558,15 @@
 
 
 
-SESSION_ID=
+SESSION_ID=Ethix-MD&jV2yQ0jL
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
-MODE=public
-WELCOME=false
+MODE=self
+WELCOME=true
 AUTO_READ=false
-AUTO_TYPING=false
+AUTO_TYPING=true
 AUTO_RECORDING=false
-ALWAYS_ONLINE=false
+ALWAYS_ONLINE=true
 AUTO_BLOCK=true
 AUTO_REACT=false
-PREFIX=
+PREFIX=.
